<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".AppActivity">

    <Button
        android:id="@+id/btnRestar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="36dp"
        android:text="@string/btn_restar"
        android:textSize="?attr/listPreferredItemPaddingStart"
        app:layout_constraintBottom_toTopOf="@+id/btnZoomMenos"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnZoomMas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btnZoomMas"
        android:textSize="?attr/listPreferredItemPaddingStart"
        app:layout_constraintBottom_toTopOf="@+id/btnOcultar"
        app:layout_constraintEnd_toStartOf="@+id/btnZoomMenos"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnZoomMenos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btnZoomMenos"
        android:textSize="?attr/listPreferredItemPaddingStart"
        app:layout_constraintBottom_toTopOf="@+id/btnReset"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnOcultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="36dp"
        android:text="@string/btn_ocultar"
        android:textSize="?attr/listPreferredItemPaddingStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnReset"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="36dp"
        android:text="Reset"
        android:textSize="?attr/listPreferredItemPaddingStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="36dp"
        android:text="@string/btn_sumar"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnZoomMas"
        app:layout_constraintEnd_toStartOf="@+id/btnRestar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="210dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="222dp"
        android:layout_height="188dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/calcufinal" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/toolbar"
        app:titleMargin="0dp"
        app:titleMarginStart="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>